third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/nested.decompiled
//**** Cross-compiled for `move` syntax from `tests/no-v1-comparison/closures/nested.move`

//# publish
module 0x42::test {
    public fun nested(p0: u64): u64 {
        let _t3: |u64|u64 has copy + drop = |arg0| lambda__1__nested(p0, arg0);
        let _t1 = |arg0,arg1| lambda__2__nested(arg0, arg1);
        _t1(_t3, 1)
    }
    fun lambda__1__nested(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun lambda__2__nested(p0: |u64|(u64), p1: u64): u64 {
        p0(p1)
    }
    public fun nested_capture(p0: u64): u64 {
        let _t3: |u64|u64 has copy + drop = |arg0| lambda__1__nested_capture(p0, arg0);
        let _t1 = |arg0| lambda__2__nested_capture(_t3, arg0);
        _t1(1)
    }
    fun lambda__1__nested_capture(p0: u64, p1: u64): u64 {
        p0 + p1
    }
    fun lambda__2__nested_capture(p0: |u64|(u64), p1: u64): u64 {
        p0(p1)
    }
}


//# run 0x42::test::nested --args 3

//# run 0x42::test::nested_capture --args 4